# solution

./: Cargo.toml  README.md  test_data.csv  wrong_test_data.csv
src/: client_status.rs  lib.rs  main.rs  transaction.rs
