[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[lib]
name = "solution"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.4"
csv = "1.1.6"
num_cpus = "1.13.1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
threadpool = "1.8.1"
